--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://containers-us-west-142.railway.app:7578/railway?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&maxAllowedPacket=67108864
+spring.datasource.url=jdbc:mysql://localhost:3307/test?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&maxAllowedPacket=67108864
 spring.datasource.username=root
 spring.datasource.password=FFEGkCdoeoFuHnWzA79L
 spring.jpa.hibernate.ddl-auto=update
