--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3307/test?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&maxAllowedPacket=67108864
 spring.datasource.username=root
-spring.datasource.password=FFEGkCdoeoFuHnWzA79L
+spring.datasource.password=98655405n*A
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 # Set max_allowed_packet to 2 MB
